[workspace]
#members = ["carrier", "clippo", "config", "client", "clouseau", "dumpy", "jedi", "migrate", "sock", "integration-tests"]
exclude = ["integration-tests"]

[package]
name = "turtl_core"
version = "0.1.0"
authors = ["Andrew Danger Lyon <orthecreedence@gmail.com>"]
license = "GPL-3.0"

[lib]
name = "turtl_core"
crate-type = ["dylib"]		# ["cdylib", "staticlib"]
doctest = false				# these annoy me

[dependencies]
carrier = { path = "carrier" }
config = { path = "config" }
clippo = { path = "clippo" }
clouseau = { path = "clouseau" }
crossbeam = "0.3.0"
dumpy = { path = "dumpy" }
fern = "0.3.5"
futures = "0.1.14"
futures-cpupool = "0.1.5"
glob = "0.2.11"
hyper = "0.9.18"
jedi = { path = "jedi" }
lazy_static = "0.2.1"
lib_permissions = { git = "https://github.com/turtl/lib-permissions", tag = "v0.1.3" }
log = "0.3.6"
migrate = { path = "migrate" }
num_cpus = "1.1.0"
protected_derive = { path = "protected_derive" }
quick-error = "1.1.0"
regex = "0.1.77"
rusqlite = "0.7.4"
rustc-serialize = "0.3.19"
serde = "1.0.8"
serde_derive = "1.0.8"
serde_json = "1.0.2"
sodiumoxide = { path = "sodiumoxide-aead" }
time = "0.1.35"

#[target.i686-pc-windows-gnu]
#user32-sys = "*"
#gdi32-sys = "*"
#[target.x86_64-pc-windows-gnu]
#user32-sys = "*"
#gdi32-sys = "*"
#[target.i686-pc-windows-msvc]
#user32-sys = "*"
#gdi32-sys = "*"
#[target.x86_64-pc-windows-msvc]
#user32-sys = "*"
#gdi32-sys = "*"

[features]
panic-on-error = []
public-api-tests = []

