[workspace]
members = ["carrier", "clippo", "config", "clouseau", "dumpy", "jedi", "migrate"]
exclude = ["integration-tests", "cwrap", "client", "sock"]

[package]
name = "turtl_core"
version = "0.1.2"
authors = ["Andrew Danger Lyon <orthecreedence@gmail.com>"]
license = "GPL-3.0"

[lib]
name = "turtl_core"
crate-type = ["cdylib"]		# ["dylib", "staticlib"]
doctest = false				# these annoy me

[features]
sqlite-static = ["rusqlite/bundled"]
build-jni = ["jni"]
panic-on-error = ["migrate/panic-on-error"]
public-api-tests = []

[dependencies]
base64 = "0.9.1"
carrier = { path = "carrier" }
config = { path = "config" }
clippo = { path = "clippo" }
clouseau = { path = "clouseau" }
crossbeam = "0.3.0"
dumpy = { path = "dumpy" }
encoding_rs = "0.8.6"
fern = "0.5.5"
fs2 = "0.4.3"
futures = "0.1.14"
futures-cpupool = "0.1.5"
glob = "0.2.11"
hex = "0.3.2"
jedi = { path = "jedi" }
jni = { version = "0.10.1", optional = true }
lazy_static = "0.2.1"
lib_permissions = { git = "https://github.com/turtl/lib-permissions", tag = "v0.1.3" }
log = "0.4.1"
log-panics = { version = "2.0.0", features = ["with-backtrace"] }
migrate = { path = "migrate" }
num_cpus = "1.8.0"
protected_derive = { path = "protected_derive" }
quick-error = "1.2.2"
regex = "0.1.77"
reqwest = "0.9.3"
rusqlite = "0.13.0"
serde = "1.0.8"
serde_derive = "1.0.8"
serde_json = "1.0.2"
sodiumoxide = "0.0.16"
time = "0.1.35"

