[workspace]
members = ["api", "carrier", "clippo", "config", "clouseau", "dumpy", "jedi", "migrate"]
exclude = ["integration-tests", "cwrap", "client", "sock"]

[package]
name = "turtl_core"
version = "0.1.2"
authors = ["Andrew Danger Lyon <orthecreedence@gmail.com>"]
license = "GPL-3.0"
edition = "2018"

[lib]
name = "turtl_core"
crate-type = ["cdylib"]		# ["dylib", "staticlib"]
doctest = false				# these annoy me

[features]
build-jni = ["jni"]
file-lock = ["fs2"]
panic-on-error = ["migrate/panic-on-error"]
public-api-tests = []
sqlite-static = ["rusqlite/bundled"]
wasm = ["api/wasm"]

[dependencies]
api = { path = "api" }
base64 = "0.9.1"
carrier = { path = "carrier" }
config = { path = "config" }
clippo = { path = "clippo" }
clouseau = { path = "clouseau" }
crossbeam = "0.3.0"
dumpy = { path = "dumpy" }
encoding_rs = "0.8.6"
fern = "0.5.5"
fs2 = { version = "0.4.3", optional = true }
futures = "0.1.14"
futures-cpupool = "0.1.5"
glob = "0.2.11"
hex = "0.3.2"
jedi = { path = "jedi" }
jni = { version = "0.10.1", optional = true }
lazy_static = "1.4.0"
lib_permissions = { git = "https://github.com/turtl/lib-permissions", tag = "v0.1.3" }
log = "0.4.1"
log-panics = { version = "2.0.0", features = ["with-backtrace"] }
migrate = { path = "migrate" }
num_cpus = "1.8.0"
protected_derive = { path = "protected_derive" }
quick-error = "1.2.2"
regex = "1.3.5"
rusqlite = "0.20.0"
serde = "1.0.8"
serde_derive = "1.0.8"
serde_json = "1.0.2"
sodiumoxide = "0.0.16"
time = "0.1.41"
url = "2.1.1"

