[package]
name = "api"
version = "0.1.0"
authors = ["Andrew Danger Lyon <orthecreedence@gmail.com>"]
edition = "2018"

[lib]
doctest = false				# these annoy me

[features]
wasm = []

[dependencies]
base64 = "0.12.0"
config = { path = "../config" }
fern = "0.5.5"
futures = { version = "0.3.4", features = ["thread-pool"] }
jedi = { path = "../jedi" }
lazy_static = "1.4.0"
log = "0.4.1"
quick-error = "1.2.3"
reqwest = { version = "0.10.4", features = ["blocking", "json"] }
serde_json = "1.0.2"
url = "2.1.1"

