[package]
name = "turtl_client"
version = "0.1.0"
authors = ["Andrew Danger Lyon <orthecreedence@gmail.com>"]

[dependencies]
carrier = { path = "../carrier" }
config = { path = "../config" }
jedi = { path = "../jedi" }
turtl_core = { path = ".." }
lazy_static = "1.4.0"
serde = "1.0.8"
serde_derive = "1.0.8"
serde_json = "1.0.2"
rustyline = "1.0.0"
regex = "0.2"
