[package]
name = "clippo"
version = "0.1.0"
authors = ["Andrew Danger Lyon <orthecreedence@gmail.com>"]

[dependencies]
fern = "0.5.5"
jedi = { path = "../jedi" }
lazy_static = "0.2.1"
log = "0.4.1"
quick-error = "1.2.2"
regex = "0.1.77"
reqwest = "0.9.3"
scraper = { path = "scraper" }
serde = "1.0.8"
serde_derive = "1.0.8"
serde_yaml = "0.7.1"
url = "1.5.0"

