[package]
name = "clippo"
version = "0.1.0"
authors = ["Andrew Danger Lyon <orthecreedence@gmail.com>"]

[features]
wasm = []

[dependencies]
fern = "0.5.5"
futures = { version = "0.3.4", features = ["thread-pool"] }
jedi = { path = "../jedi" }
lazy_static = "1.4.0"
log = "0.4.1"
quick-error = "1.2.3"
regex = "1.3.5"
reqwest = { version = "0.10.4", features = ["blocking", "json"] }
scraper = "0.11.0"
#scraper = { path = "scraper" }
serde = "1.0.8"
serde_derive = "1.0.8"
serde_yaml = "0.7.1"
url = "2.1"

