[package]
name = "integration-tests"
version = "0.1.0"
authors = ["Andrew Danger Lyon <orthecreedence@gmail.com>"]
license = "GPL-3.0"

[dependencies]
config = { path = "../config" }
cwrap = { path = "../cwrap" }
jedi = { path = "../jedi" }
lazy_static = "1.4.0"
quick-error = "1.2.2"
serde = "1.0.8"
serde_derive = "1.0.8"
serde_json = "1.0.2"

