[package]
name = "migrate"
version = "0.1.1"
authors = ["Andrew Danger Lyon <orthecreedence@gmail.com>"]

[lib]
name = "migrate"
crate-type = ["rlib"]
doctest = false				# these annoy me

[features]
panic-on-error = []

[dependencies]
aes_frast = "0.1.5"
aes-gcm = { path = "./aes-gcm" }
base64 = "0.12.0"
config = { path = "../config" }
encoding_rs = "0.8.6"
fern = "0.5.5"
hex = "0.4.2"
hmac = "0.7.1"
jedi = { path = "../jedi" }
lazy_static = "1.4.0"
log = "0.4.1"
pbkdf2 = "0.3.0"
quick-error = "1.2.3"
rand = "0.7.3"
reqwest = { version = "0.10.4", features = ["blocking", "json"] }
serde = "1.0.8"
serde_derive = "1.0.8"
serde_json = "1.0.2"
sha-1 = "0.8.2"
sha2 = "0.8.1"
url = "2.1"

