[package]
name = "protected_derive"
version = "0.1.0"
authors = ["Andrew Danger Lyon <orthecreedence@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"
proc-macro = true

[dependencies]
proc-macro2 = "1.0.9"
quote = "1.0.3"
syn = { version = "1.0.17", features = ["derive", "parsing", "printing", "clone-impls", "proc-macro", "extra-traits"] }

